<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="app.pmsoft.ispork.participant.ParticipantPickingActivity">

  <EditText
    android:id="@+id/participant_selection_search_field"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:hint="@string/type_here_to_search"
    android:inputType="textFilter"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:text="Search..." />

  <com.google.android.material.tabs.TabLayout
    android:id="@+id/participant_selection_filter_tab_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/participant_selection_search_field"
    app:tabGravity="fill">

    <com.google.android.material.tabs.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/all" />

    <com.google.android.material.tabs.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/accounts" />

    <com.google.android.material.tabs.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/payees" />
  </com.google.android.material.tabs.TabLayout>

  <View
    style="@style/Divider.Horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/participant_selection_filter_tab_layout" />

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/participant_selection_filter_tab_layout">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/participant_recycler_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:scrollbars="vertical"
      tools:layout_editor_absoluteX="8dp"
      tools:layout_editor_absoluteY="126dp"
      tools:listitem="Participant X" />
  </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
