<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".saving_goal.SavingGoalEditActivity">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/saving_goal_edit_name_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:hint="@string/name"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/saving_goal_edit_name_field"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPersonName"
      tools:text="New Smartphone" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/saving_goal_edit_notes_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:hint="@string/notes"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/saving_goal_edit_name_layout"
    app:layout_constraintEnd_toEndOf="parent">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/saving_goal_edit_notes_field"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textLongMessage|textAutoCorrect|textMultiLine|textCapSentences"
      tools:text="A new Samsung or maybe a Pixel?" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/saving_goal_edit_category_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:hint="@string/category"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/saving_goal_edit_notes_layout"
    app:layout_constraintEnd_toEndOf="parent">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/saving_goal_edit_category_field"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:cursorVisible="false"
      android:focusable="false"
      android:onClick="pickCategory"
      tools:text="" />
  </com.google.android.material.textfield.TextInputLayout>

  <LinearLayout
    android:id="@+id/saving_goal_edit_selected_criteria_layout"
    android:layout_width="match_parent"
    android:layout_height="96dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="8dp"
    android:orientation="horizontal"
    app:layout_constraintTop_toBottomOf="@id/saving_goal_edit_category_layout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

  </LinearLayout>

  <LinearLayout
    android:id="@+id/saving_goal_edit_offered_criteria_layout"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="8dp"
    android:orientation="horizontal"
    app:layout_constraintTop_toBottomOf="@+id/saving_goal_edit_selected_criteria_layout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/saving_goal_edit_rate_card"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_marginStart="4dp"
      android:layout_marginEnd="4dp"
      android:layout_marginTop="0dp"
      android:layout_weight="0.33">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/saving_goal_rate" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/saving_goal_edit_target_amount_card"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_marginStart="4dp"
      android:layout_marginEnd="4dp"
      android:layout_marginTop="0dp"
      android:layout_weight="0.33">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/saving_goal_target_amount" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/saving_goal_edit_target_date_card"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_marginStart="4dp"
      android:layout_marginEnd="4dp"
      android:layout_marginTop="0dp"
      android:layout_weight="0.33">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/saving_goal_target_date" />

    </com.google.android.material.card.MaterialCardView>

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
